--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -28,8 +28,9 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.5.2",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
