--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.300.0",
     "next": "14.1.0",
+    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.0"
