--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "templerenew",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,24 +16,23 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
-    "lucide-react": "^0.300.0",
-    "next": "14.1.0",
-    "next-themes": "^0.4.4",
+    "lucide-react": "^0.330.0",
+    "next": "15.0.0",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.31",
-    "postcss-import": "^16.0.0",
-    "tailwindcss": "^3.3.0",
+    "eslint-config-next": "15.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
